--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,28 +1,29 @@
-/* login.component.css */
 
-.login-container {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  
-  button:disabled {
-    background-color: #aaa;
-    cursor: not-allowed;
-  }
-  
+.bg-container {
+  background: url('/assets/images/registration-background.jpeg') no-repeat center center fixed;
+  background-size: cover;
+  color: white;
+}
+
+.form-container {
+  max-width: 500px;
+  width: 80%;
+  background-color: rgba(73, 80, 87, 0.8);
+}
+
+.custom-btn {
+  background-color: #28a745;
+  color: white;
+  border: 1px solid #218838;
+}
+
+.custom-btn:disabled {
+  background-color: #6c757d;
+  border: 1px solid #495057;
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
+.form-control-lg {
+  width: 100%;
+}
