--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,20 @@
-<!-- login.component.html -->
 
-<div class="login-container">
-    <h2>Iniciar Sesión</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="username">Nombre de Usuario:</label>
-        <input type="text" id="username" formControlName="username" />
-      </div>
-      <div class="form-group">
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" formControlName="password" />
-      </div>
-      <button type="submit" [disabled]="!loginForm.valid">Iniciar Sesión</button>
-    </form>
-  </div>
-  
+
+<div class="d-flex justify-content-center align-items-center vh-100 bg-container">
+
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="p-4 border rounded d-flex flex-column align-items-center form-container">
+
+    <h2 class="mb-4 text-center">Login</h2>
+
+   
+    <div class="mb-3">
+      <input type="text" id="username" formControlName="username" class="form-control form-control-lg" placeholder="Nombre de Usuario" required>
+    </div>
+
+    <div class="mb-3">
+      <input type="password" id="password" formControlName="password" class="form-control form-control-lg" placeholder="Contraseña" required>
+    </div>
+
+    <button type="submit" class="btn btn-primary btn-lg btn-block text-center custom-btn" [disabled]="!loginForm.valid">Login</button>
+  </form>
+</div>
