--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,26 +1,25 @@
-<!-- registration.component.html -->
-<form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" class="p-4">
-    <h2 class="mb-4">Registro</h2>
-  
-    <!-- Username -->
+
+<div class="d-flex justify-content-center align-items-center vh-100 bg-container">
+
+  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" class="p-4 border rounded d-flex flex-column align-items-center form-container">
+
+    <h2 class="mb-4 text-center">Registro</h2>
+
+   
     <div class="mb-3">
-      <label for="username" class="form-label">Nombre de Usuario:</label>
-      <input type="text" id="username" formControlName="username" class="form-control" required>
+      <input type="text" id="username" formControlName="username" class="form-control form-control-lg" placeholder="Nombre de Usuario" required>
     </div>
-  
-    <!-- Email -->
+
+   
     <div class="mb-3">
-      <label for="email" class="form-label">Correo Electrónico:</label>
-      <input type="email" id="email" formControlName="email" class="form-control" required>
+      <input type="email" id="email" formControlName="email" class="form-control form-control-lg" placeholder="Correo Electrónico" required>
     </div>
-  
-    <!-- Password -->
+
+
     <div class="mb-3">
-      <label for="password" class="form-label">Contraseña:</label>
-      <input type="password" id="password" formControlName="password" class="form-control" required>
+      <input type="password" id="password" formControlName="password" class="form-control form-control-lg" placeholder="Contraseña" required>
     </div>
-  
-  
-    <button type="submit" class="btn btn-primary" [disabled]="!registrationForm.valid">Registrarse</button>
+
+    <button type="submit" class="btn btn-primary btn-lg btn-block text-center custom-btn" [disabled]="!registrationForm.valid">Registrarse</button>
   </form>
-  
+</div>
