--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,7 @@
-
-
 <div class="d-flex justify-content-center align-items-center vh-100 bg-container">
-
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="p-4 border rounded d-flex flex-column align-items-center form-container">
-
     <h2 class="mb-4 text-center">Login</h2>
 
-   
     <div class="mb-3">
       <input type="text" id="username" formControlName="username" class="form-control form-control-lg" placeholder="Nombre de Usuario" required>
     </div>
@@ -16,5 +11,8 @@
     </div>
 
     <button type="submit" class="btn btn-primary btn-lg btn-block text-center custom-btn" [disabled]="!loginForm.valid">Login</button>
+
+    
+    <p class="mt-3">¿No tienes una cuenta? <a routerLink="/registration">Regístrate aquí</a></p>
   </form>
 </div>
