--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,17 +4,17 @@
     
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item" *ngIf="!isLoggedIn$">
+        <li class="nav-item" *ngIf="!isAuthenticated">
           <a class="nav-link" routerLink="/login">Iniciar Sesión</a>
         </li>
-        <li class="nav-item" *ngIf="!isLoggedIn$">
+        <li class="nav-item" *ngIf="!isAuthenticated">
           <a class="nav-link" routerLink="/registration">Registrarse</a>
         </li>
-        <li class="nav-item" *ngIf="isLoggedIn$">
+        <li class="nav-item" *ngIf="isAuthenticated">
           <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
         </li>
-        <li class="nav-item" *ngIf="!isLoggedIn$">
-          <a class="nav-link" routerLink="/users">Users</a>
+        <li class="nav-item" *ngIf="isAuthenticated && userRoles.includes('ROLE_USER')">
+          <a class="nav-link" routerLink="/users">Usuarios</a>
         </li>
       </ul>
     </div>
