Routing agregado y se arreglo el funcionamiento de sesiones

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<header>
+    <h1>Bienvenido a nuestra Tienda Online</h1>
+    <!-- ... Otro contenido del encabezado ... -->
+  </header>
+  
+  <section class="welcome">
+    <div>
+      <h2>Descubre las mejores ofertas</h2>
+      <p>Explora nuestra amplia selección de productos a precios increíbles.</p>
+    </div>
+  </section>
+  
