--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Store</a>
+    <a class="navbar-brand" routerLink="/">Store</a>
     
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
@@ -10,11 +10,11 @@
         <li class="nav-item" *ngIf="!isAuthenticated">
           <a class="nav-link" routerLink="/registration">Registrarse</a>
         </li>
-        <li class="nav-item" *ngIf="isAuthenticated">
-          <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
-        </li>
         <li class="nav-item" *ngIf="isAuthenticated && userRoles.includes('ROLE_USER')">
           <a class="nav-link" routerLink="/users">Usuarios</a>
+        </li>
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <a class="nav-link" style="cursor: pointer;" (mousedown)="logout()">Cerrar Sesión</a>
         </li>
       </ul>
     </div>
