Paginacion agregada a usuarios y los productos se muestran

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,9 @@
     <!-- ... Otro contenido del encabezado ... -->
   </header>
   
-  <section class="welcome">
+  <section class="product">
     <div>
-      <h2>Descubre las mejores ofertas</h2>
-      <p>Explora nuestra amplia selección de productos a precios increíbles.</p>
+      <app-product></app-product>
     </div>
   </section>
   
