--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,13 @@
-<p>product works!</p>
+<div class="product-list">
+    <div *ngFor="let product of products" class="product-card">
+      <div class="product-image">
+        <img [src]="product.imageUrl" alt="Product Image">
+      </div>
+      <div class="product-info">
+        <div class="product-title">{{ product.name }}</div>
+        <div class="product-description">{{ product.description }}</div>
+        <div class="product-price">{{ product.price }}</div>
+      </div>
+    </div>
+  </div>
+  
