--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,55 +1,176 @@
+::ng-deep body {
+  background-color:  #f6f6f6;
+}
+
 .product-list {
     display: flex;
-    flex-wrap: wrap; /* Permite que las tarjetas se muestran en varias filas si no caben en una sola */
-    justify-content: space-evenly; /* Alinea las tarjetas horizontalmente con espacio entre ellas */
-  }
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
 
 .product-card {
-    width: 300px;
-    height: 400px; /* Altura fija para todas las tarjetas */
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    margin: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-    cursor: pointer;
-  }
-  
-  .product-image {
-    width: 100%;
-    height: 60%; /* Altura relativa para la imagen */
-    overflow: hidden;
-  }
-  
-  .product-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* La imagen se ajustará manteniendo su relación de aspecto */
-  }
-  
-  .product-info {
+  width: 300px;
+  height: 450px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 1px; /* Reducir el margen */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.product-card:hover {
+  transform: translateY(-10px); /* Eleva la tarjeta cuando se pasa el cursor sobre ella */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); /* Añade sombra cuando se pasa el cursor sobre la tarjeta */
+}
+
+.product-info {
     padding: 16px;
     display: flex;
     flex-direction: column;
-    height: 40%;
+    height: 50%;
     box-sizing: border-box;
-  }
-  
-  .product-title {
-    font-size: 1.2em;
+}
+
+.product-title {
+    font-size: 1.4em;
     font-weight: bold;
     margin-bottom: 8px;
+}
+
+.product-description {
+    font-size: 1em;
+    margin-bottom: 12px;
+}
+
+.product-price {
+    font-size: 1.5em; /* Aumenta el tamaño de la fuente */
+    color: #e77600;
+    margin: 10px 0; /* Añade espacio alrededor del precio */
+    align-self: flex-end;
+}
+
+.product-image {
+    width: 100%;
+    height: 60%;
+    overflow: hidden;
+    border-bottom: 1px solid #ddd;
+}
+
+.product-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.product-list-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 10px;
+}
+
+::ng-deep .ngx-pagination {
+  margin: 0 auto; /* Centra la paginación */
+  display: flex; /* Asegura que los elementos hijos se alineen en línea */
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+::ng-deep .ngx-pagination .pagination-previous a:hover,
+::ng-deep .ngx-pagination .pagination-previous.disabled:hover {
+  background: #e6e6e6; 
+}
+
+::ng-deep .ngx-pagination:before,
+::ng-deep .ngx-pagination:after {
+  content: " ";
+  display: table;
+}
+
+::ng-deep .ngx-pagination:after {
+  clear: both;
+}
+
+::ng-deep .ngx-pagination li {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  margin-right: .0625rem;
+  border-radius: 0;
+  display: inline-block;
+}
+
+::ng-deep .ngx-pagination a,
+::ng-deep .ngx-pagination button {
+  color: #0a0a0a;
+  display: block;
+  padding: .1875rem .625rem;
+  border-radius: 0;
+  background-color: #f2f2f2; /* Agrega un fondo gris claro */
+  border: 1px solid #bfbfbf; /* Agrega un borde */
+}
+
+::ng-deep .ngx-pagination a:hover,
+::ng-deep .ngx-pagination button:hover {
+  background: #e6e6e6;
+}
+
+::ng-deep .ngx-pagination .current {
+  padding: .1875rem .625rem;
+  background: #2199e8;
+  color: #fefefe;
+  cursor: default;
+}
+
+::ng-deep .ngx-pagination .disabled {
+  padding: .1875rem .625rem;
+  color: #cacaca;
+  cursor: default;
+  background-color: #f2f2f2; /* Agrega un fondo gris claro */
+  border: 1px solid #bfbfbf; /* Agrega un borde */
+}
+
+::ng-deep .ngx-pagination .disabled:hover {
+  background: transparent;
+}
+
+::ng-deep .ngx-pagination a,
+::ng-deep .ngx-pagination button {
+  cursor: pointer;
+}
+
+::ng-deep .ngx-pagination .pagination-next a:after,
+::ng-deep .ngx-pagination .pagination-next.disabled:after {
+  content: "\bb";
+  display: inline-block;
+  margin-left: .5rem;
+}
+
+::ng-deep .ngx-pagination .pagination-next a:hover,
+::ng-deep .ngx-pagination .pagination-next.disabled:hover {
+  background: #e6e6e6; /* Agrega el mismo efecto de hover que el botón "previous" */
+}
+
+::ng-deep .ngx-pagination .show-for-sr {
+  position: absolute!important;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+}
+
+::ng-deep .ngx-pagination .small-screen {
+  display: none;
+}
+
+@media screen and (max-width: 601px) {
+  ::ng-deep .ngx-pagination.responsive .small-screen {
+    display: inline-block;
   }
-  
-  .product-description {
-    font-size: 0.9em;
-    margin-bottom: 8px;
+  ::ng-deep .ngx-pagination.responsive li:not(.small-screen):not(.pagination-previous):not(.pagination-next) {
+    display: none;
   }
-  
-  .product-price {
-    font-size: 1.1em;
-    color: #007bff; /* Puedes ajustar el color según tu preferencia */
-    margin-top: auto; /* Empuja el precio hacia la parte inferior */
-  }
-  
+}
