--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,13 +1,32 @@
-<div class="product-list">
-    <div *ngFor="let product of products" class="product-card">
-      <div class="product-image">
-        <img [src]="product.imageUrl" alt="Product Image">
-      </div>
-      <div class="product-info">
-        <div class="product-title">{{ product.name }}</div>
-        <div class="product-description">{{ product.description }}</div>
-        <div class="product-price">{{ product.price }}</div>
+<div class="product-list-container">
+  <div class="row">
+    <div *ngFor="let product of products | paginate: { id: 'pagination_product', itemsPerPage: itemsPerPage, currentPage: p }" class="col-md-3 mb-4"> <!-- Cambia "mb-4" a "mb-2" -->
+      <div class="product-card">
+        <div class="product-image">
+          <img src="{{ product.imageUrl }}" alt="{{ product.name }}">
+        </div>
+        <div class="product-info">
+          <h5 class="product-title">{{ product.name }}</h5>
+          <p class="product-description">{{ product.description }}</p>
+          <p class="product-price">{{ product.price }}</p>
+        </div>
       </div>
     </div>
   </div>
-  
+</div>
+<div class="pagination-container">
+  <pagination-controls class="my-pagination"
+    id="pagination_product"
+    (pageChange)="p = $event"
+    (pageBoundsCorrection)="p = $event"
+    [maxSize]="maxSize"
+    [directionLinks]="true"
+    [autoHide]="true"
+    [responsive]="true"
+    [previousLabel]="'Previous'"
+    [nextLabel]="'Next'"
+    [screenReaderPaginationLabel]="'Pagination'"
+    [screenReaderPageLabel]="'page'"
+    [screenReaderCurrentLabel]="'You\'re on page'"
+  ></pagination-controls>
+</div>
