--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,18 +3,21 @@
     <a class="navbar-brand" routerLink="/">Store</a>
     
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav">
+        <li class="nav-item" *ngIf="isAuthenticated && userRoles.includes('ROLE_USER')">
+          <a class="nav-link" routerLink="/users">Usuarios</a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav ms-auto"> <!-- Utiliza ms-auto para alinear a la derecha -->
         <li class="nav-item" *ngIf="!isAuthenticated">
           <a class="nav-link" routerLink="/login">Iniciar Sesión</a>
         </li>
         <li class="nav-item" *ngIf="!isAuthenticated">
           <a class="nav-link" routerLink="/registration">Registrarse</a>
         </li>
-        <li class="nav-item" *ngIf="isAuthenticated && userRoles.includes('ROLE_USER')">
-          <a class="nav-link" routerLink="/users">Usuarios</a>
-        </li>
         <li class="nav-item" *ngIf="isAuthenticated">
-          <a class="nav-link" style="cursor: pointer;" (mousedown)="logout()">Cerrar Sesión</a>
+          <a class="nav-link logout" (mousedown)="logout()">Cerrar Sesión</a>
         </li>
       </ul>
     </div>
